--- a/locale/object_names_bonus.ini
+++ b/locale/object_names_bonus.ini
@@ -1,6 +1,15 @@
 [bonus]
+Other
+Beetroot
+Boomerang Flower
 Containers
 Brick
-Other
 Coin
+Fire Flower
+Frog Suit
+Green Lui
+Life Mushroom
+Poisonous Mushroom
+Super Mushroom
 Question Block
+Super Star
