feat: decorations; improve some tilesets

--- a/locale/object_names_scenery.ini
+++ b/locale/object_names_scenery.ini
@@ -1,3 +1,16 @@
 [scenery]
+Sky
+Big Clouds (Face)
+Big Clouds
 Overworld
-Overworld Grass
+Castle Bottom
+Castle Top
+Cloud
+Fence
+Forest Green
+Grass Green
+Hill Green
+Mountains Green
+Tree x1 Green
+Tree x2 Green
+Tree x3 Green
