--- a/locale/tileset_names.ini
+++ b/locale/tileset_names.ini
@@ -13,6 +13,7 @@ Castle Bricks
 Solid Platform Gray
 Castle Ground
 [Hazard Launcher Supporting Tiles]
+Bullet Launcher
 [Overworld Default]
 Hard Block Brown
 Overworld Ground
