fix deco z_index in-game; fix invisible tile sprite when drawing

--- a/locale/tileset_names.ini
+++ b/locale/tileset_names.ini
@@ -11,6 +11,7 @@ Underwater
 [Castle]
 Castle Bricks
 Solid Platform Gray
+Hard Block Gray
 Castle Ground
 [Hazard Launcher Supporting Tiles]
 Bullet Launcher
