hidpi test; 'feedback' button in main menu

--- a/locale/tileset_names.ini
+++ b/locale/tileset_names.ini
@@ -35,6 +35,7 @@ Solid Platforms (bridge)
 Solid Rock Platforms
 [Starland]
 Starland Ground
+Starland Ground
 I will remove this
 [Tanks]
 Tank Tileset Default
