--- a/locale/ru.po
+++ b/locale/ru.po
@@ -19,7 +19,8 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<12 || n%100>14) ? 1 : 2);\n"
+"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && "
+"n%10<=4 && (n%100<12 || n%100>14) ? 1 : 2);\n"
 "X-Generator: Poedit 3.7\n"
 
 #: stages/main_menu/prototype_menu.gd modules/editor/classes/LevelEditor.gd
@@ -49,10 +50,6 @@ msgid "Failed to load: Missing LevelProperties"
 msgstr "Не удалось загрузить: Отсутствуют свойства уровня"
 
 #: stages/main_menu/main_menu.tscn
-msgid "Mario Worker: Community Edition"
-msgstr "Mario Worker: Community Edition"
-
-#: stages/main_menu/main_menu.tscn
 msgid ""
 "Mario Worker: Community Edition\n"
 "PRE-ALPHA PROTOTYPE Build 1"
@@ -74,25 +71,29 @@ msgstr ""
 msgid "Go to level editor"
 msgstr "Перейти к редактору"
 
-#: stages/main_menu/main_menu.tscn modules/editor/stages/level_editor.tscn
-msgid "Play level"
-msgstr "Запустить уровень"
-
 #: stages/main_menu/main_menu.tscn
 msgid "Browse level files"
 msgstr "Открыть папку уровней"
-
-#: stages/main_menu/main_menu.tscn
-msgid "Enable editor sounds"
-msgstr "Включить звуки редактора"
 
 #: stages/main_menu/main_menu.tscn stages/main_menu/objects/about_window.tscn
 msgid "About"
 msgstr "О программе"
 
 #: stages/main_menu/main_menu.tscn modules/editor/stages/level_editor.tscn
+msgid "Play level"
+msgstr "Запустить уровень"
+
+#: stages/main_menu/main_menu.tscn
+msgid "Feedback"
+msgstr "Обратная связь"
+
+#: stages/main_menu/main_menu.tscn modules/editor/stages/level_editor.tscn
 msgid "Exit"
 msgstr "Выход"
+
+#: stages/main_menu/main_menu.tscn
+msgid "Enable editor sounds"
+msgstr "Включить звуки редактора"
 
 #: stages/main_menu/main_menu.tscn modules/editor/stages/level_editor.tscn
 msgid "Open a File"
@@ -116,8 +117,11 @@ msgid "Save failed."
 msgstr "Не удалось сохранить."
 
 #: modules/editor/scripts/editor_gui.gd
-msgid "This button is unimplemented for now, use 'Play Level' from the title screen"
-msgstr "Эта кнопка на данный момент не реализована. Используйте «Запустить уровень» в главном меню"
+msgid ""
+"This button is unimplemented for now, use 'Play Level' from the title screen"
+msgstr ""
+"Эта кнопка на данный момент не реализована. Используйте «Запустить уровень» "
+"в главном меню"
 
 #: modules/editor/scripts/editor_gui.gd
 msgctxt "Grid value suffix"
@@ -640,8 +644,17 @@ msgid "Solid Platform Gray"
 msgstr "Твёрдая серая платформа"
 
 #: locale/tileset_names.ini
+msgid "Hard Block Gray"
+msgstr "Твёрдый блок серый"
+
+#: locale/tileset_names.ini
 msgid "Castle Ground"
 msgstr "Кирпичи замка (поверхность)"
+
+#: locale/tileset_names.ini
+msgctxt "Hazard Launcher Supporting Tiles"
+msgid "Bullet Launcher"
+msgstr "Пушка"
 
 #: locale/tileset_names.ini
 msgctxt "Overworld Default"
@@ -708,6 +721,10 @@ msgid "Starland Ground"
 msgstr "Земля звёздного мира"
 
 #: locale/tileset_names.ini
+msgid "Starland Ground"
+msgstr "Земля звёздного мира"
+
+#: locale/tileset_names.ini
 msgid "I will remove this"
 msgstr "Я уберу это"
 
@@ -753,12 +770,64 @@ msgstr "Начальная позиция игрока"
 
 #: locale/object_names_scenery.ini
 msgctxt "scenery"
+msgid "Sky"
+msgstr "Небо"
+
+#: locale/object_names_scenery.ini
+msgid "Big Clouds (Face)"
+msgstr "Большие облака (лицо)"
+
+#: locale/object_names_scenery.ini
+msgid "Big Clouds"
+msgstr "Большие облака"
+
+#: locale/object_names_scenery.ini
 msgid "Overworld"
 msgstr "Поверхность"
 
 #: locale/object_names_scenery.ini
-msgid "Overworld Grass"
-msgstr "Трава (поверхность)"
+msgid "Castle Bottom"
+msgstr "Замок (низ)"
+
+#: locale/object_names_scenery.ini
+msgid "Castle Top"
+msgstr "Замок (верх)"
+
+#: locale/object_names_scenery.ini
+msgid "Cloud"
+msgstr "Облако"
+
+#: locale/object_names_scenery.ini
+msgid "Fence"
+msgstr "Забор"
+
+#: locale/object_names_scenery.ini
+msgid "Forest Green"
+msgstr "Зелёный лес"
+
+#: locale/object_names_scenery.ini
+msgid "Grass Green"
+msgstr "Зелёная трава"
+
+#: locale/object_names_scenery.ini
+msgid "Hill Green"
+msgstr "Зелёный холм"
+
+#: locale/object_names_scenery.ini
+msgid "Mountains Green"
+msgstr "Зелёные горы"
+
+#: locale/object_names_scenery.ini
+msgid "Tree x1 Green"
+msgstr "Зелёное дерево (одиночное)"
+
+#: locale/object_names_scenery.ini
+msgid "Tree x2 Green"
+msgstr "Зелёное дерево (двойное)"
+
+#: locale/object_names_scenery.ini
+msgid "Tree x3 Green"
+msgstr "Зелёное дерево (тройное)"
 
 #: locale/object_names_misc.ini
 msgctxt "misc"
@@ -984,6 +1053,10 @@ msgid "Play Mario Forever: Community Edition"
 msgstr "Играть в Mario Forever: Community Edition"
 
 #: stages/main_menu/objects/about_window.gd
+msgid "A Level Editor for Mario Forever."
+msgstr "Редактор уровней для Mario Forever."
+
+#: stages/main_menu/objects/about_window.gd
 msgid "Lead Developer of MW:CE:"
 msgid_plural "Lead Developers of MW:CE:"
 msgstr[0] "Ведущий разработчик проекта:"
@@ -1024,10 +1097,6 @@ msgctxt "Put translation authors here!"
 msgid "Your name"
 msgstr "JUE13"
 
-#: stages/main_menu/objects/about_window.gd
-msgid "A Level Editor for Mario Forever."
-msgstr "Редактор уровней для Mario Forever."
-
 #~ msgid "EN"
 #~ msgstr "EN"
 
@@ -1039,6 +1108,12 @@ msgstr "Редактор уровней для Mario Forever."
 
 #~ msgid "TR"
 #~ msgstr "TR"
+
+#~ msgid "Mario Worker: Community Edition"
+#~ msgstr "Mario Worker: Community Edition"
+
+#~ msgid "Overworld Grass"
+#~ msgstr "Трава (поверхность)"
 
 #~ msgid "Space"
 #~ msgstr "Пробел"
@@ -1103,14 +1178,8 @@ msgstr "Редактор уровней для Mario Forever."
 #~ msgid "LINE 2"
 #~ msgstr "СТРОКА 2"
 
-#~ msgid "Castle"
-#~ msgstr "Замок"
-
 #~ msgid "Castle Bricks"
 #~ msgstr "Кирпичи замка"
-
-#~ msgid "Hard Block Brown"
-#~ msgstr "Твёрдый блок коричневый"
 
 #~ msgid " Objects:"
 #~ msgstr " Объектов:"
